overlay/tenant-bb/ns3/ns3-istio-virtualserver.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ruby-ex-bb
  namespace: ns3
spec:
  hosts:
    - '*'
  gateways:
    - ruby-ex-gateway-bb
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: ruby-ex
            port:
              number: 8080
